http-simple/kustomize/hom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-simple
  template:
    metadata:
      labels:
        app: http-simple
    spec:
      containers:
        - name: http-simple
          image: exemplo-registry:5000/http-simple:latest
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: certificate
              mountPath: /etc/ssl/certs/http-simple
            - name: key
              mountPath: /etc/sss/keys/http-simple
      volumes:
        - name: certificate
          configMap:
            name: http-simple-certificate
        - name: key
          secret:
            secretName: http-simple-key
