http-simple/kustomize/hom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-simple
  namespace: http-simple
spec:
  selector:
    app: http-simple
  ports:
    - name: http
      port: 80
      targetPort: http
